tests/negative/semantic/for_non_int_var/input.ci
void main() {
    for (float x = 0.0; x < 3.0; x = x + 1.0) {
        print("x\n");
    }
}
